# LayeredMolecularEditor

./: .gitignore  Cargo.toml  README.md
example/: .gitignore
example/Claisen/: H3O.yaml  S2.yaml  lme_workflow.inp.yaml  water.yaml
example/Claisen/TSA8_9/: EB_P.inp  EB_R.inp  EB_TS.inp
example/Claisen/includes/: A1.yaml  A2.yaml  A3_S2.yaml  A5.yaml  A5_H3O.yaml  A6_H2O.yaml  A7_H2O.yaml  A8.yaml  A8_H3O.yaml  A9.yaml  TSA8_9.yaml  gasteiger_charges.yaml  output.yaml  output_to_smiles.yaml  uff.yaml
example/Claisen/substituent/: CF3.yaml  CH2F.yaml  Et.yaml  H.yaml  Me.yaml  NH2.yaml  NO2.yaml
example/Claisen2/: .gitignore  A1.constraints  A1_H3O.constraints  A6_H3O.constraints  A7_H2O.constraints  O3C2.constraints  S1.yaml  lme_workflow.inp.yaml  water_H1.constraints
example/Claisen2/includes/: A1.yaml  A1_H3O.yaml  A2.yaml  A2_H2O.yaml  A3.yaml  A3_MeOH.yaml  A3_S2.yaml  A4.yaml  A4_H2O.yaml  A5.yaml  A5_H3O_A6.yaml  A6.yaml  A7.yaml  A7_MeOH.yaml  A8.yaml  A9.yaml  TSA8_9.yaml  output.yaml  output_to_smiles.yaml  uff.yaml
example/Claisen2/substituent/: CCl3.yaml  CHF2.yaml  CN.yaml  Cl.yaml  F.yaml  I.yaml  NO2.yaml  OH.yaml
example/DA/: .gitignore  Rcov.json  Rvdw.json  lme_workflow.inp.yaml  ts.mol2  ts.yaml
example/Ru/: .gitignore  S1.lme  S1.xyz  collection.ipynb  lme_workflow.inp.yaml  template.lme  template.xyz
lme/: Cargo.toml
lme/src/: chemistry.rs  group_name.rs  layer.rs  lib.rs  sparse_molecule.rs
n_to_n/: Cargo.toml
n_to_n/src/: lib.rs
snippets/: LME_mapping.py
src/: chemistry.rs  group_name.rs  io.rs  layer.rs  lib.rs  main.rs  molecule_layer.rs  n_to_n.rs  serde_default.rs  sparse_molecule.rs  substituent.rs  workspace.rs
src/server/: handlers.rs  main.rs  middlewares.rs
src/utils/: fs.rs  geometric.rs  mod.rs  sterimol.rs
src/workflow/: error.rs  input_data.rs  main.rs  mod.rs  runner.rs  step.rs  substituent.rs  workflow_data.rs
utils/: obminimize.py
workflow/: Cargo.toml
workflow/src/: input_data.rs  io.rs  lib.rs  main.rs  obabel.rs  regexsed.rs  runner.rs  step.rs  workflow_data.rs  workspace.rs
(+31859 files in other folders)
