[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
lme = {path = "../lme"}
serde = { version = "1.0", features = ["derive"] }
cached = "0.53.1"
tempfile = "3.12.0"
rayon = "1.10.0"
glob = "0.3.1"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
anyhow = "1.0.91"
nalgebra = "0.33.2"
clap = { version = "4.5.18", features = ["derive"] }
zstd = "0.13.2"
n_to_n ={ path="../n_to_n" }
